--- a/GeometryLibraryApp/GeometryLibraryApp/GeometryLibraryApp.csproj
+++ b/GeometryLibraryApp/GeometryLibraryApp/GeometryLibraryApp.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MathLibraryApp\MathLibrary\bin\Debug\MathLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
